# application-services

./: .buildconfig-android.yml  Cargo.toml
components/places/ffi/src/: lib.rs
components/places/sql/: create_fts.sql
components/places/src/: ffi.rs  match_impl.rs
components/places/src/api/: matcher.rs
components/places/src/db/: db.rs  schema.rs
components/places/src/history_sync/: plan.rs  store.rs
components/viaduct/src/: backend.rs  lib.rs
docs/sync/: tps-tests.md  welcome.md
fxa-rust-client/sdks/swift/FxAClient/FxAClient/: FirefoxAccount.swift
fxa-rust-client/sdks/swift/FxAClient/FxAClient/Errors/: RustError.swift
fxa-rust-client/sdks/swift/FxAClient/docs/: index.html  undocumented.json
fxa-rust-client/sdks/swift/FxAClient/docs/Classes/: OAuthInfo.html  Profile.html  (+1 more)
logins-api/android/LoginsApi/: .gitignore  settings.gradle
logins-api/android/LoginsApi/gradle/wrapper/: gradle-wrapper.properties
logins-api/android/LoginsApi/loginsapi/: build.gradle
logins-api/android/LoginsSampleApp/: settings.gradle
logins-api/android/LoginsSampleApp/app/: build.gradle
logins-api/android/LoginsSampleApp/gradle/wrapper/: gradle-wrapper.properties
megazords/fenix/android/: build.gradle
megazords/fenix/src/: lib.rs
sync-pw-sql-store/: Cargo.toml
sync-pw-sql-store/src/: db.rs  error.rs  lib.rs  login.rs  schema.rs  util.rs
sync15-adapter/examples/: sync-pass.rs
sync15-adapter/src/: bso_record.rs
website/: package-lock.json  sidebars.json
website/blog/: 2017-09-26-fxa-train-109.md  2018-06-11-fxa-train-113.md
website/i18n/: en.json
(+26 files in other folders)
