[package]
name = "sync-pw-sql-store"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
sync15-adapter = { path = "../sync15-adapter" }
serde = "1.0.63"
serde_derive = "1.0.63"
serde_json = "1.0.19"
log = "0.4"
error-chain = "0.11"
rusqlite = "0.13.0"
lazy_static = "1.0"
more-asserts = "0.2.1"
url = "1.7.0"
